@@ -1,3 +1,12 @@
+@Article{eulerAlgo,
+  author={J.G. Propp and D.W. Wilson},
+  title={How to get a perfectly random sample from a generic markov chain and generate a random spanning tree of a directed graph},
+  journal={Journal of Algorithms},
+  volume={27},
+  pages={170--217},
+  year={1998},
+}
+
 @Article{euclidean,
   title={Local feature frequency profile: a method to measure structural similarity in proteins},
   author={I. Choi and J. Kwon and S. Kim},
